# SyntaxTreeParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  test.sh
.github/workflows/: new_issues.yml
include/: SyntaxTreeParser.h
src/: SyntaxTreeParser.cpp
tests/: main.cpp  test_invalid.cpp  test_valid.cpp
